# language-haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  language-haskell.cabal
app/: Parse.hs
data/base/Data/: Functor.hs  Kind.hs  Maybe.hs  Proxy.hs  Tuple.hs
data/report/: Prelude.hs  PreludeIO.hs  PreludeList.hs  PreludeText.hs  README
dist-newstyle/cache/: compiler  config
doc/: dataflow.dot  dependencies.dot  equation.dot  modules.dot  presentation.org  testflow.dot
src/Data/: ZipNonEmpty.hs
src/Language/: Haskell.hs
src/Language/Haskell/: AST.hs  Abstract.hs  Binder.hs  Disambiguator.hs  Extensions.hs  Grammar.hs  Reorganizer.hs  Reserializer.hs  Resolver.hs  Template.hs  TypeSystem.hs
src/Language/Haskell/Extensions/: AST.hs  Abstract.hs  Grammar.hs  Reformulator.hs  Translation.hs  Verifier.hs
src/Language/Haskell/TypeSystem/: Constraints.hs
test/: Extensions.hs  Positive.hs  Test.hs
test/extensions/: BangDataFields.hs  BangPatterns.hs  BinaryLiterals.hs  BlockArguments.hs  CApiFFI.hs  DatatypeContexts.hs  DuplicateRecordFields.hs  EmptyCase.hs  EmptyDataDeclarations.hs  ExplicitForAll.hs  ExplicitNamespaces.hs  ExtendedLiterals.hs  FieldSelectors.hs  FlexibleContexts.hs  FlexibleInstances.hs  FunctionalDependencies.hs  HexFloatLiterals.hs  ImplicitParameters.hs  InterruptibleFFI.hs  LambdaCase.hs  MagicHash.hs  MultiParameterTypeClasses.hs  MultiWayIf.hs  NamedDefaults.hs  NamedFieldPuns.hs  NegativeLiterals.hs  NoBangDataFields.hs  NoDatatypeContexts.hs  NoEmptyDataDeclarations.hs  NoFlexibleContexts.hs  NoPatternGuards.hs  NoTraditionalRecordSyntax.hs  NumericUnderscores.hs  OrPatterns.hs  OverloadedLabels.hs  ParallelListComprehensions.hs  PartialTypeSignatures.hs  PatternGuards.hs  QualifiedDo.hs  QualifiedMDo.hs  (+14 more)
test/ghc/: T2245.hs  longString.hs
test/ghc/BangPatterns/: T3116.hs  read042.hs
test/ghc/DataKinds/: T10134a.hs  T10183.hs  T10321.hs  T19883.hs
test/ghc/DefaultSignatures/: T16832.hs  T19296.hs  T20719.hs
test/ghc/DerivingStrategies/: T19691.hs  T20375.hs
test/ghc/ExplicitNamespaces/: T14032b.hs  T24396a.hs
test/ghc/FFI/: foreignInterruptible.hs
test/ghc/ImplicitParameters/: T12133.hs  T23761.hs  T3102.hs
test/ghc/ImpredicativeTypes/: Compose.hs  PList2.hs  simpl017.hs  tc214.hs
test/ghc/InstanceSigs/: T21973a.hs  T21973b.hs
test/ghc/KindSignatures/: EmptyCase004.hs  EmptyCase006.hs  Ppr011.hs  gadt20.hs  karl1.hs
test/ghc/LambdaCase/: FixErrorsPlugin.hs  T12698.hs  T13822.hs  T14554.hs  T14556.hs  T19577.hs  T22383.hs  cont_nondet_handler.hs
test/ghc/LexicalNegation/: LexicalNegation.hs
test/ghc/LinearTypes/: EtaExpandDataCon.hs  T18998b.hs  T20232.hs  T21650_b.hs
test/ghc/MPTCs/: T14306.hs  read052.hs
test/ghc/MultilineStrings/: T25132.hs
test/ghc/ParallelListComprehensions/: read054.hs
test/ghc/PatternSynonyms/: DsIncompleteRecSel1.hs  T10997_1a.hs  T11524.hs  T11711.hs  T12698.hs  T14253.hs  T14270.hs  T15695.hs  T20485.hs  T20485a.hs
test/ghc/PolyKinds/: T13343.hs  T7282.hs
test/ghc/QualifiedDo/: T19918.hs  T21206.hs
test/ghc/QuantifiedConstraints/: T21037.hs
test/ghc/RankNTypes/: T11305.hs  tc241.hs
test/ghc/RecordWildCards/: T2723.hs  dsrun015.hs
test/ghc/RecursiveDo/: mdo003.hs  mdo004.hs  mdo005.hs  mdo006.hs
test/ghc/RequiredTypeArguments/: HieVdq.hs  T14158_vdq.hs  T17594f.hs  T22326_callStack.hs  T22326_fail_bang_pat.hs  T22326_fail_lam_arg.hs  T22326_fail_nonlinear.hs  T22326_fail_pat.hs  T22326_sig.hs  T22326_symbolVal.hs  T22326_typeRep.hs  T23738_basic.hs  T23738_fail_implicit_tv.hs  T23738_fail_var.hs  T23738_fail_wild.hs  T23738_sigforall.hs  T23738_tyvar.hs  T23738_wild.hs  T23739_fail_case.hs  T23739_fail_ret.hs  T23739_nested.hs  T23739_sig.hs  T23739_symbolVal.hs  T23739_typeRep.hs  T23739a.hs  T23740d.hs  T23740e.hs  T23740f.hs  T23740g.hs  T24318.hs  T24570.hs  T24810.hs  WithSpineVDQ_LintErr.hs
test/ghc/StandaloneKindSignatures/: T11342d.hs  T17021a.hs
test/ghc/TypeAbstractions/: CoOpt_Singletons.hs  T11480b.hs  T11523.hs  T12055.hs  T12055a.hs  T13343.hs  T14507.hs  T15352.hs  T16244.hs  T16245.hs  T16245a.hs  T16356_Compile1.hs  T16391a.hs  T17594e.hs  T18851d.hs  T18986b.hs  T19577.hs  T19847.hs  T19847b.hs  T20443a.hs  T21501.hs  T22383.hs  T22478d.hs  T22478f.hs  T22560a.hs  T22560b.hs  T22560c.hs  T22560e.hs  T23510b.hs  T23512b.hs  T23514b.hs  T23514c.hs  T24470b.hs  T24604a.hs  T24887.hs  T6018.hs  T7224.hs  T9151.hs  Test25454.hs  saks030.hs
test/ghc/TypeData/: Lib.hs  T22141g.hs  T22332a.hs  T22948a.hs  T22948b.hs  T22964.hs  T23022.hs  T23023.hs  T23549.hs  TDBadConsConstraint.hs  TDExistential.hs  TDGADT.hs  TDGoodConsConstraints.hs  TDStrictnessGADT.hs  TDVector.hs
test/ghc/TypeOperators/: T2205.hs
test/ghc/UnboxedSums/: RepPolyUnboxedPatterns.hs
test/ghc/UnboxedTuples/: ArithInt16.hs  ArithInt32.hs  ArithInt8.hs  GenManyUbxSums.hs  LevAddrToAny.hs  ListTuplePunsSuccess1.hs  RepPolyTuple2b.hs  RepPolyWrappedVar.hs  T15547.hs  T18249.hs  T19931.hs  T21651.hs  T21906.hs  T22141c.hs  T22212.hs  T22291b.hs  T22388.hs  T22510.hs  T23209.hs  T23221.hs  T24160_FMA.hs  T24496.hs  UnliftedNewtypesByteArrayOffset.hs  mul2.hs
test/ghc/ViewPatterns/: FixErrorsPlugin.hs  T12785b.hs  T20143.hs
