cabal-version:       >=1.10

name:                language-haskell
version:             0.1
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Mario Blažević
maintainer:          blamario@protonmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Language.Haskell, Language.Haskell.Abstract, Language.Haskell.AST,
                       Language.Haskell.Grammar, Language.Haskell.Reserializer, Language.Haskell.Template
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <5, text < 1.3, containers >= 0.5 && < 1.0, transformers == 0.5.*,
                       monoid-subclasses >= 0.4.1 && <= 1.2, parsers >= 0.12.7 && < 0.13, input-parsers < 0.2,
                       rank2classes >= 1.3 && < 1.5, grammatical-parsers >= 0.5 && < 0.6, deep-transformations >= 0.1.1 && < 0.2,
                       witherable == 0.4.*,
                       template-haskell >= 2.11 && < 2.17, pretty == 1.1.*
                       -- filepath < 1.5, directory < 1.4, prettyprinter >= 1.2.1 && < 1.7,
  hs-source-dirs:      src/
  default-language:    Haskell2010

executable haskell-parser
  main-is:             Parse.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <5, text < 1.3, repr-tree-syb < 0.2, filepath < 1.5,
                       monoid-subclasses >= 0.4.1 && <= 1.1, optparse-applicative >= 0.12 && < 0.16,
                       rank2classes >= 1.3 && < 1.5, grammatical-parsers >= 0.5 && < 0.6, deep-transformations < 0.2,
                       language-haskell
  hs-source-dirs:      app/
  default-language:    Haskell2010

test-suite             positive
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5, text < 1.3, grammatical-parsers,
                       either == 5.*, directory < 2, filepath < 1.5,
                       monoid-subclasses >= 0.4.1 && <= 1.1, deep-transformations < 0.2,
                       tasty >= 0.7, tasty-hunit,
                       language-haskell
  main-is:             test/Test.hs
  default-language:    Haskell2010
