cabal-version:       >=1.10

name:                language-haskell
version:             0.1
synopsis:            ASTs, parser and pretty-printer for Haskell 2010 with most language extensions
description:
   A library and executable providing the parser, pretty-printer, and some AST transformations for the Haskell 2010
   language and its syntactic extensions. The extension syntax is defined in form of independent grammar overlays,
   making it easy to set up new syntactic experiments.
bug-reports:         https://github.com/blamario/language-Haskell/issues
license:             BSD3
license-file:        LICENSE
author:              Mario Blažević
maintainer:          blamario@protonmail.com
copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
data-dir:            data/
data-files:          report/*.hs
source-repository head
   type: git
   location: https://github.com/blamario/language-Haskell/

library
  exposed-modules:     Language.Haskell, Language.Haskell.Abstract, Language.Haskell.AST,
                       Language.Haskell.Binder, Language.Haskell.Reserializer,
                       Language.Haskell.Grammar, Language.Haskell.Reorganizer, Language.Haskell.Template,
                       Language.Haskell.Extensions,
                       Language.Haskell.Extensions.Abstract, Language.Haskell.Extensions.AST,
                       Language.Haskell.Extensions.Grammar,
                       Language.Haskell.Extensions.Reformulator,
                       Language.Haskell.Extensions.Translation,
                       Language.Haskell.Extensions.Verifier
  other-modules:       Paths_language_haskell
  build-depends:       base >=4.7 && <5, ghc-prim < 0.14,
                       foldable1-classes-compat < 0.2,
                       bytestring < 0.13, text < 3, containers >= 0.5.8 && < 1,
                       reducers < 4, transformers >= 0.5 && < 0.7,
                       directory < 2, filepath < 1.5,
                       monoid-subclasses >= 1.2.4 && < 1.3,
                       parsers >= 0.12.7 && < 0.13, input-parsers >= 0.2.2 && < 0.4,
                       rank2classes >= 1.3 && < 1.6, grammatical-parsers >= 0.6 && < 0.8,
                       deep-transformations >= 0.4 && < 0.5,
                       either == 5.0.*, witherable >= 0.4 && <0.6,
                       memoize == 1.1.*,
                       template-haskell >= 2.11 && < 2.24, th-abstraction >= 0.4 && < 0.8, pretty == 1.1.*
                       -- filepath < 1.5, directory < 1.4, prettyprinter >= 1.2.1 && < 1.7,
  hs-source-dirs:      src/
  default-language:    Haskell2010

executable haskell-parser
  main-is:             Parse.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <5, containers < 1, text, repr-tree-syb < 0.2, filepath < 1.5,
                       monoid-subclasses, optparse-applicative >= 0.12 && < 0.19,
                       input-parsers >= 0.2.2 && < 0.4, grammatical-parsers,
                       rank2classes, deep-transformations,
                       language-haskell
  hs-source-dirs:      app/
  default-language:    Haskell2010

test-suite             positive
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5, text, containers < 1, grammatical-parsers,
                       either == 5.*, directory < 2, filepath < 1.5,
                       monoid-subclasses, deep-transformations,
                       tasty >= 0.7, tasty-hunit,
                       language-haskell
  main-is:             test/Positive.hs
  default-language:    Haskell2010

test-suite             extensions
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5, text, containers < 1, grammatical-parsers,
                       either == 5.*, directory < 2, filepath < 1.5,
                       monoid-subclasses, deep-transformations,
                       tasty >= 0.7, tasty-hunit,
                       language-haskell
  main-is:             test/Extensions.hs
  default-language:    Haskell2010
